[package]
name = "climg2base64"
version = "0.2.0"
edition = "2024"
license = "Unlicense OR MIT"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
image = { version = "0.25.9", features=["avif", "bmp", "png", "gif", "jpeg", "webp"]}
clipboard-files = { version = "0.1.2", optional = true }

[features]
default = []
file = ["clipboard-files"]
